--- a/tools/bio3d/.shed.yml
+++ b/tools/bio3d/.shed.yml
@@ -1,5 +1,5 @@
 name: bio3d
-owner: tsenapathi
+owner: chemteam
 description: Bio3d is a program that can be used to analyse molecular dynamics trajectories.
 homepage_url: ttp://thegrantlab.org/bio3d/index.php
 long_description: |
