--- a/tools/buildtools/protein_structure_rebuilders/qiskit_xyz2pdb/.shed.yml
+++ b/tools/buildtools/protein_structure_rebuilders/qiskit_xyz2pdb/.shed.yml
@@ -1,4 +1,4 @@
-name: Qiskit-xyz2pdb
+name: qiskit_xyz2pdb
 owner: chemteam
 description: "This is a python script wrapped into a Galaxy tool that converts generic alpha carbon xyz files into proper PDB files."
 homepage_url: https://pypi.org/project/qiskit-xyz2pdb/
@@ -8,11 +8,10 @@ remote_repository_url: https://github.com/galaxycomputationalchemistry/galaxy-to
 type: unrestricted
 categories:
   - Structural biology
-  - Quantum computing
   - Computational chemistry
 auto_tool_repositories:
   name_template: "{{ tool_id }}"
-  description_template: "Wrapper for Qiskit-xyz2pdb: {{ tool_name }}"
+  description_template: "Wrapper for: {{ tool_name }}"
 maintainers:
   - thepineapplepirate
   - cumbof
